--- a/TouristGreenbook/TGB.WebAPI/Views/Trips/SelectPlaces.cshtml
+++ b/TouristGreenbook/TGB.WebAPI/Views/Trips/SelectPlaces.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Http.Features.Authentication
 @model IEnumerable<TGB.WebAPI.Models.Place>
 @*Dictionary<string, List<Place>>()*@
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
 @{
     ViewData["Title"] = "Choose needed places";
 }
